deployment-prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-rest-api
  labels:
    app: nodejs-rest-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-rest-api
  template:
    metadata:
      labels:
        app: nodejs-rest-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "4000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: nodejs-rest-api
          image: bhatta007/myapp:b99cfa1ac0bcceaaa5a2509e2bc69def7b2b4543
          ports:
            - containerPort: 4000
