service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-rest-api-service
  labels:
    app: nodejs-rest-api
spec:
  type: ClusterIP
  selector:
    app: nodejs-rest-api
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
